// Copyright 2021 The Analytics Zoo Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.intel.analytics.zoo.ppml.psi.generated";
option java_outer_classname = "PSIProto";

service PSIService {
  // Gives SHA256 Hash salt
  rpc salt (SaltRequest) returns (SaltReply) {}
  rpc uploadSet (UploadRequest) returns (UploadResponse) {}
  rpc downloadIntersection (DownloadRequest) returns (DownloadResponse) {}
}

enum SIGNAL {
  SUCCESS = 0;
  WAIT = 1;
  TIMEOUT = 2;
  EMPTY_INPUT = 3;
  ERROR = 4;
}

message SaltRequest {
  string task_id = 1;
  int32 client_num = 2;
  string secure_code = 3;
}

message SaltReply {
  string salt_reply = 1;
}

message UploadRequest {
  string task_id = 1;
  string client_id = 2;
  int32 split = 3;
  int32 num_split = 4;
  int32 split_length = 5;
  int32 total_length = 6;
  repeated string hashedID = 7;
}

message UploadResponse {
  string task_id = 1;
  SIGNAL status = 2;
}

message DownloadRequest {
  string task_id = 1;
  int32 split = 2;
}

message DownloadResponse {
  string task_id = 1;
  SIGNAL status = 2;
  int32 split = 3;
  int32 num_split = 4;
  int32 split_length = 5;
  int32 total_length = 6;
  repeated string intersection = 7;
}
